production/opentelemetry/resources/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: otel-collector
  labels:
    app: opentelemetry-collector
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - otel-grpc.clusters.zjusct.io
    - otel-grpc.s.zjusct.io
  rules:
    - matches:
        - method:
            type: RegularExpression
            service: ".*"
            method: ".*"
      backendRefs:
        - name: aggregator-collector
          port: 4317
          weight: 1
