production/opentelemetry/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-collector
  labels:
    app: opentelemetry-collector
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - otel-http.clusters.zjusct.io
    - otel-http.s.zjusct.io
  rules:
    - backendRefs:
        - name: aggregator-collector
          port: 4318
          weight: 1
